2009-03-03  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/automate/Makefile.am:
	  - automate plugin name.
	* src/ccm-preferences.c
	(ccm_preferences_on_title_on_size_allocate),
	(ccm_preferences_on_expose_event), (ccm_preferences_on_realize):
	  - preference dialog shape.
	* src/ccm-region.c (Compress), (ccm_region_resize):
	  - use gdk_region shrink instead scale to resize region, fix some
	    window draw strangeness on resize.

2009-03-02  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * lib/ccm-config.c:
    * lib/ccm-config.h:
      - add ccm_config_set_color method.
    * src/ccm-preferences-page.c:
    * src/ccm-preferences-page.h:
      - add ccm_preferences_page_get_screen_num method.
    * src/ccm-preferences.c:
      - shape window preference dialog.
	* plugins/shadow/ccm-shadow.ui:
	* plugins/shadow/shadow.svg:
    * data/ccm-preferences.ui:
    * plugins/shadow/Makefile.am:
    * plugins/shadow/ccm-shadow.c:
      - add shadow preferences.

2009-02-28  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* NEWS:
	* configure.ac:
	* src/ccm-screen.c (ccm_screen_on_window_property_changed):
	* src/ccm-window.c (impl_ccm_window_resize):
	  - New pre-release to test xdg key configuration files.
	  - Fix some glitches when window return form fullscreen.

2009-02-28  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-display.c (ccm_display_get_pointers):
	* src/ccm-extension-loader.c
	(ccm_extension_loader_get_preferences_plugins),
	(ccm_extension_loader_get_screen_window_plugins),
	(ccm_extension_loader_get_screen_plugins),
	(ccm_extension_loader_get_window_plugins),
	(ccm_extension_loader_add_plugin_path):
	* src/ccm-plugin.c (_ccm_plugin_lock_method):
	* src/ccm-preferences-page.c
	(ccm_preferences_page_on_composite_desktop_toggled):
	* src/ccm-screen.c (ccm_screen_check_stack),
	(impl_ccm_screen_paint), (impl_ccm_screen_remove_window),
	(ccm_screen_get_window_plugins), (ccm_screen_get_plugins):